--- a/sass/main.css
+++ b/sass/main.css
@@ -167,6 +167,21 @@ nav {
     font-size: 26px;
   }
 }
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
 .banner {
   margin-right: auto;
   margin-left: auto;
