--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,6 +56,8 @@ ul {
 
 @import 'components/page-header';
 
+@import 'components/mobile-menu';
+
 @import 'components/banner';
 
 @import 'components/descriptions';
