--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -12,4 +12,63 @@
     border: none;
     border-radius: 50%;
     outline: none;
+
+    &:hover, &:focus {
+        fill: $color-logo;
+    }
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: $text-banner;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+
+    .container {
+        position: relative;
+        padding: 48px 25px;
+
+        .menu-toggle {
+            position: absolute;
+            top: 10px;
+            right: 0px;
+        }
+    }
+}
+
+.mobile-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+    .link {
+        font-family: $font-primary;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 1.175;
+        letter-spacing: 0.02em;
+        color: $color-title;
+
+        &:hover, &:focus {
+            color: $color-logo;
+        }
+    }
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
 }
