--- a/sass/main.css
+++ b/sass/main.css
@@ -181,7 +181,58 @@ nav {
   border-radius: 50%;
   outline: none;
 }
+.menu-toggle:hover, .menu-toggle:focus {
+  fill: #2196F3;
+}
 
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #FFFFFF;
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container .container {
+  position: relative;
+  padding: 48px 25px;
+}
+.menu-container .container .menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 0px;
+}
+
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.mobile-menu .link {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+.mobile-menu .link:hover, .mobile-menu .link:focus {
+  color: #2196F3;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
 .banner {
   margin-right: auto;
   margin-left: auto;
