--- a/sass/components/_portafolio.scss
+++ b/sass/components/_portafolio.scss
@@ -1,7 +1,6 @@
 .products {
     background-color: $text-banner;
-    padding-top: 106px;
-    padding-bottom: 82px;
+    padding: 94px 0;
 }
 
 .filters {
