--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -13,7 +13,7 @@
     border-radius: 50%;
     outline: none;
 
-    &:hover, &:focus {
+    &:hover, &:focus, &:active {
         fill: $color-logo;
     }
 }
@@ -31,8 +31,12 @@
     transition: transform 250ms ease-in-out;
 
     .container {
+        display: flex;
+        flex-direction: column;
         position: relative;
         padding: 48px 25px;
+        justify-content: space-between;
+        height: 100%;
 
         .menu-toggle {
             position: absolute;
@@ -58,6 +62,53 @@
 
         &:hover, &:focus {
             color: $color-logo;
+        }
+    }
+    &__contacts {
+        address {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 32px;
+        }
+    }
+    &__phone {
+        font-family: $font-primary;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.1765;
+        letter-spacing: 0.02em;
+        color: $color-logo;
+    }
+    &__mail {
+        font-family: $font-primary;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 1.166;
+        letter-spacing: 0.02em;
+        color: $color-text;
+    }
+}
+
+.list-networks {
+    margin-top: 64px;
+    display: flex;
+    gap: 10px;
+
+    li {
+        font-family: $font-primary;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.222;
+        letter-spacing: 0.02em;
+        color: $color-logo;
+        cursor: pointer;    
+
+        &:not(:last-child) {
+            border-right: 1px solid rgba(33, 33, 33, 0.2);
+            padding-right: 10px;
         }
     }
 }
