--- a/sass/components/_portafolio.scss
+++ b/sass/components/_portafolio.scss
@@ -1,12 +1,15 @@
 .products {
     background-color: $text-banner;
-    padding: 94px 0;
+    padding: 60px 0;
 }
 
 .filters {
     display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+    max-width: 274px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 15px 8px;
+    margin-bottom: 40px;
 
     &__item {
         font-family: $font-primary;
@@ -22,41 +25,33 @@
         border: 0px;
         padding: 6px 22px;
 
-        &:hover,&:focus {
+        &:hover,
+        &:focus {
             color: $text-banner;
             background: $color-logo;
             box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
             border-radius: 4px;
         }
-    }
-    
-    &__list:not(:last-child) {
-        margin-right: 8px;
-    }
+    }    
 }
 
 .brochure {
     display: flex;
+    gap: 30px;
     flex-wrap: wrap;
-    justify-content: space-between;
-    row-gap: 30px;
 
     &__item {
-        box-sizing: content-box;
-        width: 370px;
         background-color: $text-banner;
-        border: 1px solid #EEEEEE;
-        padding-bottom: 20px;
+        outline: 1px solid #EEEEEE;
+        //padding-bottom: 20px;
 
         &:hover {
-                box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
         }
     }
 
     &__description {
         position: relative;
-        width: 370px;
-        height: 294px;
         overflow: hidden;
     }
 
@@ -81,16 +76,14 @@
         line-height: 1.56;
         letter-spacing: 0.03em;
         margin: 0;
-        padding: 63px 24px;
+        padding: 77px 24px;
     }
 
     &__category {
         font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.03em;
-        margin-top: 20px;
-        margin-left: 24px;
-        margin-right: 24px;
+        margin: 20px 24px;
     }
 
     &__name {
@@ -100,5 +93,40 @@
         letter-spacing: 0.06em;
         color: $color-title;
         margin-bottom: 4px;
+    }
+}
+
+@media (min-width: 768px) {
+    .filters {
+        justify-content: center;
+        margin-bottom: 30px;
+        max-width: 100%;
+    }
+    .brochure {
+        &__item {
+            flex-basis: calc((100% - 30px)/2);
+        }
+
+        &__transition {
+            padding-top: 49px;
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .products {
+        padding: 94px 0;
+    }
+    .filters {
+        margin-bottom: 50px;
+    }
+    .brochure {
+        &__item {
+            flex-basis: calc((100% - 60px)/3);
+        }
+
+        &__transition {
+            padding-top: 63px;
+        }
     }
 }
